--- a/sov/config/limine.cfg
+++ b/sov/config/limine.cfg
@@ -1,7 +1,7 @@
 TIMEOUT=0
 
-:saturn9
+:Sov
     PROTOCOL=limine
 
     MODULE_PATH=boot:///ramdisk.img
-    KERNEL_PATH=boot:///seav.bin
+    KERNEL_PATH=boot:///sov.bin
