--- a/isodir/limine.cfg
+++ b/isodir/limine.cfg
@@ -4,4 +4,4 @@ TIMEOUT=0
     PROTOCOL=limine
 
     MODULE_PATH=boot:///ramdisk.img
-    KERNEL_PATH=boot:///seav.bin
+    KERNEL_PATH=boot:///sov.bin
